--------------------------------------------------------------------------------

name:                unpacked-either
version:             0.1.0.0
synopsis:            An unpacked either data type
description:         Please see README.md
homepage:            https://github.com/chessai/unpacked-either
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
copyright:           Copyright © 2018 chessai
category:            Development
build-type:          Simple
cabal-version:       >=1.10

--------------------------------------------------------------------------------

library
  hs-source-dirs:      src
  exposed-modules:     Data.Either.Unpacked
  build-depends:       base >= 4.10 && < 5
                     , ghc-prim
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite unpacked-either-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , unpacked-either
                     , QuickCheck
                     , quickcheck-classes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

-------------------------------------------------------------------------------

source-repository head
  type:     git
  location: https://github.com/chessai/unpacked-either

--------------------------------------------------------------------------------
